OpenSearch changes to fix failing IT and configs

--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -1,5 +1,5 @@
 # OpenSearch plugin descriptor file
-# This file must exist as 'plugin-descriptor.properties' in a folder named `elasticsearch`
+# This file must exist as 'plugin-descriptor.properties' in a folder named `opensearch`
 # inside all plugins.
 #
 #
