--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,20 +14,20 @@
 
 
 # Description: 
-# docker-compose.yml for running elasticsearch in docker.
+# docker-compose.yml for running opensearch in docker.
 #
 # This file was generated from the template at templates/docker-compose.yml.j2
 
 version: '2.1'
 services:
-  elasticsearch1:
-    container_name: elasticsearch1
+  opensearch1:
+    container_name: opensearch1
     image: odfe-es/pa-rca:1.0
     mem_limit: 4g
     networks:
       esnet:
         aliases:
-          - elasticsearch
+          - opensearch
     # If unset, uses empty string which Docker ignores
     # Defined in tests/conftest.py to test starting with a random uid
     user: ${PROCESS_UID}
@@ -37,10 +37,10 @@ services:
         hard: -1
     # DATA_VOLUME{1,2} are defined in tests/conftest.py
     volumes:
-      - ${DATA_VOLUME1}:/usr/share/elasticsearch/data
+      - ${DATA_VOLUME1}:/usr/share/opensearch/data
 
-  elasticsearch2:
-    container_name: elasticsearch2
+  opensearch2:
+    container_name: opensearch2
     environment:
       - node.master=false
     image: odfe-es/pa-rca:1.0
@@ -53,7 +53,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ${DATA_VOLUME2}:/usr/share/elasticsearch/data
+      - ${DATA_VOLUME2}:/usr/share/opensearch/data
 
 volumes:
   esdata1:
