--- a/build.gradle
+++ b/build.gradle
@@ -207,13 +207,11 @@ if (isSnapshot) {
 }
 
 test {
-    filter { // Skip failing tests
+    filter { // Ignore failing tests
         // Test testMissingHeapMetrics failed
-        excludeTestsMatching 'com.amazon.opendistro.elasticsearch.performanceanalyzer.rca.integTests.tests.jvmsizing.HeapSizeIncreaseMissingMetricsTest'
+        excludeTestsMatching 'com.amazon.opendistro.opensearch.performanceanalyzer.rca.integTests.tests.jvmsizing.HeapSizeIncreaseMissingMetricsTest'
         // Test testJvmActions failed
-        excludeTestsMatching 'com.amazon.opendistro.elasticsearch.performanceanalyzer.rca.integTests.tests.consolidate_tuning.JvmFlipFlopITest'
-        // Tests testFlipFlop failed
-        excludeTestsMatching 'com.amazon.opendistro.elasticsearch.performanceanalyzer.rca.integTests.tests.jvm.old_gen_policy.validator.LevelOneValidator'
+        excludeTestsMatching 'com.amazon.opendistro.opensearch.performanceanalyzer.rca.integTests.tests.consolidate_tuning.JvmFlipFlopITest'
     }
     enabled = true
     retry {
